--- a/style.css
+++ b/style.css
@@ -17,20 +17,30 @@ body{
 .nav{
     display: flex;
     padding: 20px 10px 20px 10px;
+
 }
 .logo{
     font-family: "Montserrat";
     font-style: bold;
     font-size: 35px;
-    margin-right: 10px;
+    margin-left: 50px;
+    margin-top: -30px;
+
 }
 .icon{
-    width: 32;
-    height: 32;
-    align-items: flex-end;
-    margin-right: auto; 
-    transform: translateX(1050%);   
+    margin-left: 400px;
+    transform: translateY(-100%);
+
 }
+.icon-close{
+    margin-left: 400px;
+    margin-top: -20px;
+}
+
+.close-menu{
+    margin-right: 450px;
+}
+
 
 .y{
     color: #2A90D9;
@@ -41,13 +51,11 @@ body{
 .search{
     width: 328px;
     border-radius: 40px;
-    height: 70px;
+    height: 60px;
     border: 1px solid #D6D6D6;
     box-shadow: 0px 0px 8px rgba(0 0 0 0.16);
     margin-top: 80px;
     margin-left: 50px;
-
-
 }
 
 .paint{
@@ -85,13 +93,37 @@ body{
     transform: translateX(50px);
     margin-top: 25px;
 }
-.search::before{
-    content: url(image/location.svg)
+.location {
+    margin-top: 25px;
+    margin-left: -80px;
+    width: 22px;
+    height: 22px;
+    transform: translateX(100%);
+    padding-right: -100px;
+}
+.Destination{
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: "Regular";
+    color: #A3A3A3;
+    margin-right: -80px;
+    padding-left:45px ;
+    margin-left: -10px;
+    transform: translateY(100%);
+    margin-bottom: 50px;
+}
+.ellipse{
+    margin-left: 150px;
+    margin-top: -250px;
+    width: 40px;
+    height: 40px;
+    transform: translateY(-35%);
 }
 
 .middle{
     padding: 20px 10px 20px 10px;
     margin-top: 400px;
+    box-shadow: #D6D6D6;
 }
 .btn-white{
     text-decoration: none;
@@ -101,6 +133,377 @@ body{
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: "Regular";
-    color: var(--text-color);
+    color: #262729;
+    transform: translateY(-100%);
+    margin-right: 160px;
+    width: 55px;
+    height: 24px;
+    padding-left: 30px;
+}
+.icon-end{
+    display: flex;
+}
+.lang{
+    margin-left:auto
+}
+.money{
+    margin-right: 50px;
+}
+.social{
+    margin-top: 20px;
+    transform: translateX(-20%);
+    margin-top: 250px;
+    grid: 20px;
+}
+.social-bottom{
+    transform: translateX(10%);
+}
+
+
+.menu-toggle {
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: black;
+    cursor: pointer;
+}
+
+.nav-menu {
+    display: flex;
+}
+
+.nav-menu ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-menu li {
+    margin-left: 20px;
+}
+
+.nav-menu a {
+    text-decoration: none;
+    color: black;
+}
+
+.close-menu {
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: black;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
+.menu-toggle {
+    display: block;
+}
+.nav-menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffff;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+    transform: translateX(100%);
+    z-index: 1;
+}
+.nav-menu.active {
+    transform: translateX(0);
+    display: flex;
+}
+.nav-menu ul {
+    flex-direction: column;
+    width: 100%;
+}
+.nav-menu li {
+    margin: 10px 0;
+}
+.close-menu {
+    display: block;
+}
+
+.cards h2{
+    width: 328px;
+    height: 34px;
+    font-family: "Montserrat";
+    font-family: "semi Bold";
+    font-size: 28;
+    text-align: center;
+    padding-left: 70px;
+}
+.cards h3{
+    width: 500px;
+    height: 140px;
+    font-family:"Montserrat";
+    font-weight: "Regular";
+    font-size: 20px;
+    text-align: center;
+    margin-left: -20px;
+    margin-bottom: -100px;
+}
+.cards p{
+    width: 328px;
+    height: 140px;
+    font-family: "Montserrat";
+    font-weight: "Regular";
+    font-size: 20px;
+    text-align: center;
+    margin-left: 50px;
+}
+.cards-img{    
+    align-items: center;
+    transform: translateX(150%);
+}
+
+.special-offer{
+    padding: 20px 10px 20px 10px;
+    margin-left:50px ;
+
+}
+.offer{
+    border: 1px solid white;
+    border-radius: 0%;
+}
+.walls{
+    transform: translateX(10%);
+}
+.offer h2{
+    height: 34px;
+    font-family: "Montserrat";
+    font-size: 28px;
+    font-weight: "semiBold";
+    transform: translateX(20%);
+    margin-top: -50px;
+    margin-bottom: 40px;
+}
+.rating-button { 
+    border: none;
+    border-radius: 15px; 
+    padding: 15px 25px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    margin-right: 100px;
+    transform: translateY(-400%);
+    margin-left: 50px;
+}
+
+.rating-button .btn-offer {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333; 
+    position: relative;
+}
+.btn-offer::before{
+    content: url(image/Star\ 1.svg);
+    transform: translateX(-100%);
+}
+.content{
+    display: flex;
+}
+.content h3{
+    font-family: "Montserrat";
+    margin-top:-228px;
+    position: absolute;
+    padding-left: 80px;
+    font-size: 16px;
+    font-weight: "Regular";
+}
+.heart{
+    transform: translateX(970%);
+    margin-top: -450px;
+}
+.offer h4{
+    font-family: "Monserrat";
+    font-size: 22px;
+    font-weight: "Medium";
+    color: #262729;
+}
+.club{
+    transform: translateX(5%);
+}
+.nov{
+    font-family: "Montserrat";
+    font-size: 18px;
+    font-weight: "Regular";
+    color:#262729;
+}
+.bold{
+    font-family: "Montserrat";
+    font-size: 30px;
+    font-weight: "Medium";
+    color: #2A90D9;
+}
+.light{
+    font-family: "Montserrat";
+    font-size: 18px;
+    font-weight: "Regular";
+    color: #2A90D9;
+}
+.review{
+    padding: 20px 10px 20px 10px;
+    margin-left: 50px;
+}
+.review h2{
+    font-family: "Montserrat";
+    font-size: 28px;
+    font-weight: "SemiBold";
+    transform: translateX(20%);
+}
+.lady{
+    align-self: center;
+    margin-left: 100px;
+    margin-top: 50px;
+}
+.review .search{
+    width: 328px;
+    border-radius: 20px;
+    height: 70px;
+    border: 1px solid #EE685F;
+    background-color: #EE685F;
+    margin-top: 80px;
+    margin-left: 50px;
+    transform: translateX(-60px);
+    margin-top: 10px;
+}
+.btn-red{
+    color: #FFFFFf;
+    text-decoration: none;
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: "SemiBold";
+}
+.post{
+    padding: 20px 10px 20px 10px;
+    margin-left: 50px;
+}
+.recent-posts h2{
+    font-family: "Montserrat";
+    font-size: 28px;
+    font-weight: "SemiBold";
+    text-align: center;
+    margin-top: 40px;
+}
+.row{
+    transform: translateX(15%);
+    margin-top: 50px;
+}
+.may{
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: "Regular";
+    margin-left: 50px;
+    padding-top:10px ;
+}
+.recent-posts h3{
+    font-family: "Montserrat";
+    font-size: 20px;
+    font-weight: "SemiBold";
+    margin-left: 50px;
+    margin-top: 40px;
+}
+.recent-posts p{
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: "Regular";
+    width: 328px;
+    text-align: left;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+.time{
+    color: #2A90D9;
+    margin-left:200px;
+}
+.time::before{
+    content: url(image/bx_time-five.svg);
+    padding-right: 5px;
     transform: translateY(-50%);
+}
+.footer{
+    padding: 20px 10px 20px 10px;
+    margin-left:50px ;
+}
+.list h3{
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: "SemiBold";
+}
+.list ul {
+    list-style: none;
+    padding-left: 50px;
+}
+
+.list li {
+    margin-bottom: 8px;
+    
+}
+
+.list a {
+    text-decoration: none;
+    color:#262729;
+}
+.news{
+    font-family: "Montserrat";
+    font-size: 16px;
+    width: 250px;
+    height: 20px;
+    font-weight: "SemiBold";
+    padding-left: 50px;
+    margin-top: 50px;
+}
+.email{
+    position: relative;
+    width: 300px;
+    border-radius: 10px;
+    height: 40px;
+    border: 1px solid #EE685F;
+    box-shadow: 0px 0px 8px rgba(0 0 0 0.16);
+    margin-top: -100px;
+    margin-left: 200px;
+    margin-bottom: 120px;
+}
+.email{
+    transform: translateY(50%);
+    margin-left: 50px;
+}
+.btn-red{
+    transform: translateY(100%);
+    margin-top: 250px;
+    
+}
+.red{
+    position: absolute;
+    transform: translateX(-100%);
+    margin-top: -5px;
+    
+}
+.your-email{
+    font-family: "Montserrat";
+    font-size: 14px;
+    font-weight: "Regular";
+    margin-left:55px ;
+    margin-top: 60px;
+    margin-bottom: 10px;
+}
+hr{
+    height: 1px;
+    width: 80%;
+    top: 200px;
+    margin-left: 50px;
+}
+.footer-end .logo{
+    margin-top: 20px;
+    transform: translateX(-15px);
+}
+.social{
+    margin-left: 30px;
+    gap: 2px
 }
