--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body{
     height: 60px;
     border: 1px solid #D6D6D6;
     box-shadow: 0px 0px 8px rgba(0 0 0 0.16);
-    margin-top: 80px;
+    margin-top: 90px;
     margin-left: 50px;
 }
 
@@ -94,30 +94,21 @@ body{
     margin-top: 25px;
 }
 .location {
-    margin-top: 25px;
-    margin-left: -80px;
-    width: 22px;
-    height: 22px;
-    transform: translateX(100%);
-    padding-right: -100px;
+    transform: translateX(-650%);
+    margin-top: 10px;
+    
 }
 .Destination{
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: "Regular";
     color: #A3A3A3;
-    margin-right: -80px;
-    padding-left:45px ;
-    margin-left: -10px;
-    transform: translateY(100%);
-    margin-bottom: 50px;
+    margin-left: 85px;
+    
 }
 .ellipse{
-    margin-left: 150px;
-    margin-top: -250px;
-    width: 40px;
-    height: 40px;
-    transform: translateY(-35%);
+    margin-left: 325px;
+    transform: translateY(-90%);
 }
 
 .middle{
@@ -125,21 +116,15 @@ body{
     margin-top: 400px;
     box-shadow: #D6D6D6;
 }
-.btn-white{
-    text-decoration: none;
-}
-
 .where{
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: "Regular";
     color: #262729;
-    transform: translateY(-100%);
-    margin-right: 160px;
-    width: 55px;
-    height: 24px;
-    padding-left: 30px;
+    margin-left: 90px;
+    margin-top: -50px;
 }
+
 .icon-end{
     display: flex;
 }
@@ -269,13 +254,17 @@ body{
 
 }
 .offer{
-    border: 1px solid white;
-    border-radius: 0%;
+    border: 1px solid #e5e4e9;
+    border-radius: 10px;
+    width: 350px;
+    height: 388px;
+    margin-bottom: 15px;
+    margin-left: 16px;
 }
 .walls{
-    transform: translateX(10%);
+    transform: translateX(0%);
 }
-.offer h2{
+.special-offer h2{
     height: 34px;
     font-family: "Montserrat";
     font-size: 28px;
@@ -425,7 +414,8 @@ body{
 .time::before{
     content: url(image/bx_time-five.svg);
     padding-right: 5px;
-    transform: translateY(-50%);
+    transform: translateY(5%);
+
 }
 .footer{
     padding: 20px 10px 20px 10px;
