--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 }
 body{
     font-family: "montserrat", Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 
 }
 .nav{
@@ -25,7 +26,12 @@ body{
     font-size: 35px;
     margin-left: 50px;
     margin-top: -30px;
-
+}
+.logo-end{
+    font-family: "Montserrat";
+    font-style: bold;
+    font-size: 35px;
+    margin-left: 50px
 }
 .icon{
     margin-left: 400px;
@@ -34,7 +40,7 @@ body{
 }
 .icon-close{
     margin-left: 400px;
-    margin-top: -20px;
+    margin-top: -30px;
 }
 
 .close-menu{
@@ -48,21 +54,27 @@ body{
 .lo{
     color: #EE685F;
 }
-.search{
+/* .Search{
+    position: relative;
     width: 328px;
     border-radius: 40px;
     height: 60px;
-    border: 1px solid #D6D6D6;
+    border: 2px solid #A3A3A3;
     box-shadow: 0px 0px 8px rgba(0 0 0 0.16);
-    margin-top: 90px;
+    margin-top: 190px;
+    transform: translateY(-190%);
     margin-left: 50px;
-}
+    background-color: #EBEBEB; */
+    
+
 
 .paint{
-    width: 360px;
-    height: 334px;
+    padding: 20px 10px 20px 10px;
+    height: 50%;
+    width: 100%;
     position: absolute;
-    margin-bottom: 50px;
+    margin-bottom: 90px;
+    margin-left: 7px;
 }
 .img{
     width: 100%;
@@ -93,46 +105,58 @@ body{
     transform: translateX(50px);
     margin-top: 25px;
 }
+.paint img{
+    transform: translateX(-10%);
+    margin-top: -18px;
+}
 .location {
-    transform: translateX(-650%);
+    margin-left: 7px;
     margin-top: 10px;
     
 }
-.Destination{
+/* .Destination{
+    position:relative;
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: "Regular";
     color: #A3A3A3;
     margin-left: 85px;
-    
+    margin-top: -150px;
 }
+
 .ellipse{
     margin-left: 325px;
-    transform: translateY(-90%);
-}
+    margin-top: -200px;
+} */
 
 .middle{
     padding: 20px 10px 20px 10px;
     margin-top: 400px;
     box-shadow: #D6D6D6;
 }
-.where{
+/* .where{
+    position: absolute;
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: "Regular";
     color: #262729;
     margin-left: 90px;
-    margin-top: -50px;
-}
+    margin-top: -15px;
+} */
 
 .icon-end{
     display: flex;
 }
 .lang{
-    margin-left:auto
+    margin-left: 5px;
+    margin-top: 35px;
 }
 .money{
-    margin-right: 50px;
+    margin-right: 10px;
+    margin-top: 35px;
+}
+.deals{
+    transform: translateY(25%);
 }
 .social{
     margin-top: 20px;
@@ -143,7 +167,6 @@ body{
 .social-bottom{
     transform: translateX(10%);
 }
-
 
 .menu-toggle {
     font-size: 24px;
@@ -214,7 +237,10 @@ body{
 .close-menu {
     display: block;
 }
+.cards{
+    background-color: #EBEBEB;
 
+}
 .cards h2{
     width: 328px;
     height: 34px;
@@ -223,6 +249,8 @@ body{
     font-size: 28;
     text-align: center;
     padding-left: 70px;
+    padding-top: 50px;
+    margin-bottom: 25px;
 }
 .cards h3{
     width: 500px;
@@ -243,14 +271,18 @@ body{
     text-align: center;
     margin-left: 50px;
 }
-.cards-img{    
-    align-items: center;
-    transform: translateX(150%);
+#chooseContainer img {
+    margin-left: 170px;
+}
+
+#chooseContainer{
+    background-color: #EBEBEB;
+    margin-bottom: 50px;
 }
 
 .special-offer{
-    padding: 20px 10px 20px 10px;
-    margin-left:50px ;
+    padding: 15px 10px 15px 10px;
+    margin-left:40px ;
 
 }
 .offer{
@@ -259,21 +291,22 @@ body{
     width: 350px;
     height: 388px;
     margin-bottom: 15px;
-    margin-left: 16px;
+    margin-left: 15px;
 }
 .walls{
     transform: translateX(0%);
 }
-.special-offer h2{
+/* .special-offer h2{
     height: 34px;
     font-family: "Montserrat";
     font-size: 28px;
     font-weight: "semiBold";
     transform: translateX(20%);
     margin-top: -50px;
-    margin-bottom: 40px;
-}
-.rating-button { 
+    margin-bottom: 40px; */
+
+
+/* .rating-button { 
     border: none;
     border-radius: 15px; 
     padding: 15px 25px;
@@ -281,43 +314,94 @@ body{
     margin-right: 100px;
     transform: translateY(-400%);
     margin-left: 50px;
-}
+} */
 
-.rating-button .btn-offer {
+/* .rating-button .btn-offer {
     display: flex;
     align-items: center;
     text-decoration: none;
     color: #333; 
+    position: relative; */
+/* }
+/* .btn-offer::before{
+    content: url(image/Star\ 1.svg);
+    transform: translateX(-100%); */
+/* } */
+/* .content{
+    display: flex;
+} */
+
+.special-offer h2{
+    font-family: "Montserrat";
+    font-size: 28px;
+    font-weight: "semiBold";
+    margin-left: 90px;
+    height: 34px;
+    color: #262729;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.room{
     position: relative;
 }
-.btn-offer::before{
-    content: url(image/Star\ 1.svg);
-    transform: translateX(-100%);
-}
-.content{
-    display: flex;
-}
-.content h3{
-    font-family: "Montserrat";
-    margin-top:-228px;
+.offer h3{
     position: absolute;
-    padding-left: 80px;
+    font-family: "Montserrat";
+    margin-top:-200px;
+    padding-left: 70px;
     font-size: 16px;
     font-weight: "Regular";
+    padding-right: 40px;
+
 }
 .heart{
+    position: absolute;
     transform: translateX(970%);
-    margin-top: -450px;
+    margin-top: -200px
 }
-.offer h4{
-    font-family: "Monserrat";
+.star{
+    position: absolute;
+    margin-top: -200px;
+    margin-left: 50px;
+}
+.rate{
+    position: relative;
+    border: 2px #f7f5f5 solid;
+    border-radius: 10px;
+    height: 33px;
+    max-width: 5px;
+    margin-left: 30px;
+
+}
+
+.offer p{
+    font-family: "Montserrat";
     font-size: 22px;
     font-weight: "Medium";
+    margin-top: 20px;
+}
+.offer h4{
+    font-family: "Montserrat";
+    font-size: 16px;
+    font-weight: "Regular";
     color: #262729;
+    margin-top: 15px;
 }
-.club{
+span{
+    color:#2A90D9;
+    font-family: "Montserrat";
+    font-weight: "Medium";
+    font-size: 30px;
+}
+.offer h5{
+    color: #2A90D9;
+    font-family: "Montserrat";
+    font-size: 18px;
+    font-weight: "Regular";
+}
+/* .club{
     transform: translateX(5%);
-}
+} */
 .nov{
     font-family: "Montserrat";
     font-size: 18px;
@@ -336,31 +420,46 @@ body{
     font-weight: "Regular";
     color: #2A90D9;
 }
-.review{
+.Review{
     padding: 20px 10px 20px 10px;
     margin-left: 50px;
+    margin-top: 50px;
 }
-.review h2{
+.Review h2{
     font-family: "Montserrat";
     font-size: 28px;
     font-weight: "SemiBold";
-    transform: translateX(20%);
+    margin-bottom: 10px;
+    transform: translateX(110px);
 }
-.lady{
+.review-image{
     align-self: center;
-    margin-left: 100px;
-    margin-top: 50px;
+    margin-left: 120px;
+    margin-top: 10px;
 }
-.review .search{
+#userExperience img{
+    margin-left: 120px;
+}
+button.search {
     width: 328px;
     border-radius: 20px;
-    height: 70px;
+    height: 60px;
     border: 1px solid #EE685F;
     background-color: #EE685F;
-    margin-top: 80px;
-    margin-left: 50px;
-    transform: translateX(-60px);
-    margin-top: 10px;
+    color: #fff; 
+    font-size: 16px;
+    text-align: center;
+    cursor: pointer;
+    margin-top:10px ;
+    margin-left: 30px;
+}
+
+button.search:hover {
+    background-color: #D9534F; 
+}
+
+button {
+    all: unset; 
 }
 .btn-red{
     color: #FFFFFf;
@@ -373,12 +472,14 @@ body{
     padding: 20px 10px 20px 10px;
     margin-left: 50px;
 }
-.recent-posts h2{
+.posts h2{
     font-family: "Montserrat";
     font-size: 28px;
     font-weight: "SemiBold";
     text-align: center;
     margin-top: 40px;
+    margin-left: 60px;
+    margin-top: 50px;
 }
 .row{
     transform: translateX(15%);
@@ -411,11 +512,18 @@ body{
     color: #2A90D9;
     margin-left:200px;
 }
-.time::before{
-    content: url(image/bx_time-five.svg);
-    padding-right: 5px;
-    transform: translateY(5%);
-
+.five{
+    margin-left: -110px;
+    margin-top: -5px;
+}
+.fiften{
+    margin-left: -112px;
+    padding-right: -3px;
+    margin-top: -5px;
+}
+.one{
+    margin-left: -102px;
+    margin-top: -5px;
 }
 .footer{
     padding: 20px 10px 20px 10px;
@@ -466,7 +574,7 @@ body{
 }
 .btn-red{
     transform: translateY(100%);
-    margin-top: 250px;
+    margin-top: 240px;
     
 }
 .red{
@@ -496,4 +604,58 @@ hr{
 .social{
     margin-left: 30px;
     gap: 2px
+}
+.design{
+    padding-top: 20px;
+}
+.design h3{
+    font-size: 16px;
+    font-family: "Montserrat";
+    font-weight: 100;
+}
+.design h4{
+    font-size: 18px;
+    font-family: "Montserrat";
+    font-weight: 200;
+}
+
+.there {
+    position: relative;
+    border: 2px solid #A3A3A3;
+    height: 60px;
+    margin-left: 50px;
+    width: 328px;
+    box-shadow: 0px 0px 8px rgba(0 0 0 0.16);
+    background-color: #EBEBEB;
+    border-radius: 40px;
+    margin-top: 50px;
+}
+
+.where {
+    position: absolute;
+    margin-left: 50px;
+
+}
+
+.Destination {
+    position: absolute;
+    margin-left: 70px;
+    margin-top: 25px;
+}
+
+.ellipse {
+    position: absolute;
+    right: 5px;
+    top: 25px;
+}
+
+.Search {
+    position: absolute;
+}
+
+
+.location {
+    position: absolute;
+    margin-left: 50px;
+    margin-top: 50px;
 }
