--- a/style.css
+++ b/style.css
@@ -109,11 +109,11 @@ body{
     transform: translateX(-10%);
     margin-top: -18px;
 }
-.location {
+/* .location {
     margin-left: 7px;
     margin-top: 10px;
     
-}
+} */
 /* .Destination{
     position:relative;
     font-family: "Montserrat";
@@ -248,9 +248,9 @@ body{
     font-family: "semi Bold";
     font-size: 28;
     text-align: center;
-    padding-left: 70px;
-    padding-top: 50px;
-    margin-bottom: 25px;
+    padding-left: 80px;
+    padding-top: 70px;
+    margin-bottom: 50px;
 }
 .cards h3{
     width: 500px;
@@ -269,7 +269,7 @@ body{
     font-weight: "Regular";
     font-size: 20px;
     text-align: center;
-    margin-left: 50px;
+    margin-left: 55px;
 }
 #chooseContainer img {
     margin-left: 170px;
@@ -291,11 +291,11 @@ body{
     width: 350px;
     height: 388px;
     margin-bottom: 15px;
-    margin-left: 15px;
+    margin-left: 40px;
 }
-.walls{
+/* .walls{
     transform: translateX(0%);
-}
+} */
 /* .special-offer h2{
     height: 34px;
     font-family: "Montserrat";
@@ -330,7 +330,9 @@ body{
 /* .content{
     display: flex;
 } */
-
+#userExperience img{
+    transform: translateX(25%);
+}
 .special-offer h2{
     font-family: "Montserrat";
     font-size: 28px;
@@ -341,17 +343,17 @@ body{
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.room{
+/* .room{
     position: relative;
-}
+} */
 .offer h3{
     position: absolute;
     font-family: "Montserrat";
     margin-top:-200px;
-    padding-left: 70px;
+    padding-left: 85px;
     font-size: 16px;
     font-weight: "Regular";
-    padding-right: 40px;
+    padding-right: 45px;
 
 }
 .heart{
@@ -361,31 +363,33 @@ body{
 }
 .star{
     position: absolute;
-    margin-top: -200px;
-    margin-left: 50px;
+    margin-top: -195px;
+    transform: translateX(400%);
+    padding-right: -35px;
 }
-.rate{
+/* .rate{
     position: relative;
-    border: 2px #f7f5f5 solid;
+    border: 2px #000 solid;
     border-radius: 10px;
-    height: 33px;
-    max-width: 5px;
+    height: 30px;
+    width: 1px;
     margin-left: 30px;
-
-}
+} */
 
 .offer p{
     font-family: "Montserrat";
     font-size: 22px;
     font-weight: "Medium";
-    margin-top: 20px;
+    margin-top: 200px;
+    margin-left: -75px;
 }
 .offer h4{
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: "Regular";
     color: #262729;
-    margin-top: 15px;
+    margin-top: 60px;
+    margin-left: 10px;
 }
 span{
     color:#2A90D9;
@@ -398,6 +402,10 @@ span{
     font-family: "Montserrat";
     font-size: 18px;
     font-weight: "Regular";
+    margin-left: 10px;
+}
+.offer img{
+    margin-left: 0px;
 }
 /* .club{
     transform: translateX(5%);
@@ -429,8 +437,8 @@ span{
     font-family: "Montserrat";
     font-size: 28px;
     font-weight: "SemiBold";
-    margin-bottom: 10px;
-    transform: translateX(110px);
+    margin-bottom: 30px;
+    transform: translateX(32%);
 }
 .review-image{
     align-self: center;
@@ -439,6 +447,10 @@ span{
 }
 #userExperience img{
     margin-left: 120px;
+}
+
+#recentPost .row{
+    margin-left: 20px;
 }
 button.search {
     width: 328px;
@@ -468,38 +480,41 @@ button {
     font-size: 16px;
     font-weight: "SemiBold";
 }
-.post{
+.Post{
     padding: 20px 10px 20px 10px;
-    margin-left: 50px;
 }
-.posts h2{
+.Post h2{
     font-family: "Montserrat";
     font-size: 28px;
     font-weight: "SemiBold";
     text-align: center;
     margin-top: 40px;
-    margin-left: 60px;
+    margin-left: -10px;
     margin-top: 50px;
 }
 .row{
-    transform: translateX(15%);
+    transform: translateX(10%);
     margin-top: 50px;
 }
 .may{
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: "Regular";
-    margin-left: 50px;
-    padding-top:10px ;
+    margin-left: 55px;
+    padding-top:30px ;
 }
-.recent-posts h3{
+
+#recentPost h4{
+    margin-left: 60px;
+}
+.recent h3{
     font-family: "Montserrat";
     font-size: 20px;
     font-weight: "SemiBold";
     margin-left: 50px;
-    margin-top: 40px;
+    margin-top: 5px;
 }
-.recent-posts p{
+.recent p{
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: "Regular";
@@ -510,22 +525,24 @@ button {
 }
 .time{
     color: #2A90D9;
-    margin-left:200px;
+    margin-left:300px;
+    font-size: 14px;
+    margin-top: -15px;
 }
-.five{
-    margin-left: -110px;
+/* .five{
+    margin-left: -120px;
     margin-top: -5px;
-}
-.fiften{
+} */
+/* .fiften{
     margin-left: -112px;
     padding-right: -3px;
     margin-top: -5px;
-}
+} */
 .one{
-    margin-left: -102px;
-    margin-top: -5px;
+    margin-left: 330px;
+    transform: translateY(-80%);
 }
-.footer{
+.page{
     padding: 20px 10px 20px 10px;
     margin-left:50px ;
 }
@@ -541,6 +558,7 @@ button {
 
 .list li {
     margin-bottom: 8px;
+    margin-left: -20px;
     
 }
 
@@ -580,7 +598,7 @@ button {
 .red{
     position: absolute;
     transform: translateX(-100%);
-    margin-top: -5px;
+    margin-top: -4px;
     
 }
 .your-email{
@@ -594,7 +612,7 @@ button {
 hr{
     height: 1px;
     width: 80%;
-    top: 200px;
+    top: 140px;
     margin-left: 50px;
 }
 .footer-end .logo{
@@ -605,6 +623,9 @@ hr{
     margin-left: 30px;
     gap: 2px
 }
+.social-bottom{
+    margin-right: 75px;
+}
 .design{
     padding-top: 20px;
 }
@@ -612,11 +633,13 @@ hr{
     font-size: 16px;
     font-family: "Montserrat";
     font-weight: 100;
+    margin-left: 30px ;
 }
 .design h4{
     font-size: 18px;
     font-family: "Montserrat";
     font-weight: 200;
+    margin-left: 30px;
 }
 
 .there {
@@ -630,17 +653,29 @@ hr{
     border-radius: 40px;
     margin-top: 50px;
 }
+.location {
+    content: url(image/location.svg);
+    margin-top: -45px;
+    transform: translateX(-150%);
+    
+}
 
 .where {
-    position: absolute;
-    margin-left: 50px;
+    margin-left: 48px;
+    margin-top: -30px;
+    font-family: "Montserrat";
+    font-weight: 16px;
 
 }
 
 .Destination {
+    font-size: "Montserrat";
+    font-size: 16px;
+    font-weight: "Regular";
     position: absolute;
-    margin-left: 70px;
-    margin-top: 25px;
+    margin-left: 55px;
+    margin-top: -5px;
+    color: #A3A3A3;
 }
 
 .ellipse {
@@ -655,7 +690,6 @@ hr{
 
 
 .location {
-    position: absolute;
+    padding-top: 60px;
     margin-left: 50px;
-    margin-top: 50px;
 }
