--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
     margin-left: 50px
 }
 .icon{
-    margin-left: 400px;
+    margin-left: 440px;
     transform: translateY(-100%);
 
 }
@@ -248,7 +248,7 @@ body{
     font-family: "semi Bold";
     font-size: 28;
     text-align: center;
-    padding-left: 80px;
+    margin-left: 70px;
     padding-top: 70px;
     margin-bottom: 50px;
 }
@@ -259,7 +259,7 @@ body{
     font-weight: "Regular";
     font-size: 20px;
     text-align: center;
-    margin-left: -20px;
+    margin-left: -55px;
     margin-bottom: -100px;
 }
 .cards p{
@@ -269,10 +269,13 @@ body{
     font-weight: "Regular";
     font-size: 20px;
     text-align: center;
-    margin-left: 55px;
+    margin-left: 60px;
 }
 #chooseContainer img {
     margin-left: 170px;
+}
+#chooseContainer h3{
+    transform: translateX(5%);
 }
 
 #chooseContainer{
@@ -363,18 +366,20 @@ body{
 }
 .star{
     position: absolute;
-    margin-top: -195px;
+    margin-top: -197px;
     transform: translateX(400%);
     padding-right: -35px;
 }
-/* .rate{
+.rate{
     position: relative;
-    border: 2px #000 solid;
+    border: 2px #ffff solid;
     border-radius: 10px;
     height: 30px;
     width: 1px;
     margin-left: 30px;
-} */
+    box-shadow: 0p 0px 8px rgba(0 0 0 0.16);
+    background-color: #FFFFFf;
+}
 
 .offer p{
     font-family: "Montserrat";
@@ -382,20 +387,21 @@ body{
     font-weight: "Medium";
     margin-top: 200px;
     margin-left: -75px;
+    color: #262729;
 }
 .offer h4{
     font-family: "Montserrat";
     font-size: 16px;
     font-weight: "Regular";
     color: #262729;
-    margin-top: 60px;
+    margin-top: 65px;
     margin-left: 10px;
 }
 span{
     color:#2A90D9;
     font-family: "Montserrat";
     font-weight: "Medium";
-    font-size: 30px;
+    font-size: 25px;
 }
 .offer h5{
     color: #2A90D9;
@@ -403,6 +409,7 @@ span{
     font-size: 18px;
     font-weight: "Regular";
     margin-left: 10px;
+    margin-top: 10px;
 }
 .offer img{
     margin-left: 0px;
@@ -646,7 +653,7 @@ hr{
     position: relative;
     border: 2px solid #A3A3A3;
     height: 60px;
-    margin-left: 50px;
+    margin-left: 60px;
     width: 328px;
     box-shadow: 0px 0px 8px rgba(0 0 0 0.16);
     background-color: #EBEBEB;
