--- a/style.css
+++ b/style.css
@@ -60,19 +60,6 @@ body{
     color: #EE685F;
     margin-left: -10px;
 }
-/* .Search{
-    position: relative;
-    width: 328px;
-    border-radius: 40px;
-    height: 60px;
-    border: 2px solid #A3A3A3;
-    box-shadow: 0px 0px 8px rgba(0 0 0 0.16);
-    margin-top: 190px;
-    transform: translateY(-190%);
-    margin-left: 50px;
-    background-color: #EBEBEB; */
-    
-
 
 .paint{
     padding: 20px 10px 20px 10px;
@@ -115,40 +102,14 @@ body{
     transform: translateX(-10%);
     margin-top: -18px;
 }
-/* .location {
-    margin-left: 7px;
-    margin-top: 10px;
-    
-} */
-/* .Destination{
-    position:relative;
-    font-family: "Montserrat";
-    font-size: 16px;
-    font-weight: "Regular";
-    color: #A3A3A3;
-    margin-left: 85px;
-    margin-top: -150px;
-}
 
-.ellipse{
-    margin-left: 325px;
-    margin-top: -200px;
-} */
 
 .middle{
     padding: 20px 10px 20px 10px;
     margin-top: 400px;
     box-shadow: #D6D6D6;
 }
-/* .where{
-    position: absolute;
-    font-family: "Montserrat";
-    font-size: 16px;
-    font-weight: "Regular";
-    color: #262729;
-    margin-left: 90px;
-    margin-top: -15px;
-} */
+
 
 .icon-end{
     display: flex;
@@ -306,43 +267,8 @@ body{
     margin-bottom: 15px;
     margin-left: 40px;
 }
-/* .walls{
-    transform: translateX(0%);
-} */
-/* .special-offer h2{
-    height: 34px;
-    font-family: "Montserrat";
-    font-size: 28px;
-    font-weight: "semiBold";
-    transform: translateX(20%);
-    margin-top: -50px;
-    margin-bottom: 40px; */
 
 
-/* .rating-button { 
-    border: none;
-    border-radius: 15px; 
-    padding: 15px 25px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin-right: 100px;
-    transform: translateY(-400%);
-    margin-left: 50px;
-} */
-
-/* .rating-button .btn-offer {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #333; 
-    position: relative; */
-/* }
-/* .btn-offer::before{
-    content: url(image/Star\ 1.svg);
-    transform: translateX(-100%); */
-/* } */
-/* .content{
-    display: flex;
-} */
 #userExperience img{
     transform: translateX(25%);
 }
@@ -712,32 +638,28 @@ hr{
 }
 
 @media(min-width: 1024px) {
-    .cards{
-        display: grid;
-        grid-template-rows: repeat(4, 1fr);
-    }
     .cards h2{
+        margin-top: 60%;
+        width: 324;
         font-size: 40px;
-        width: 324px;
-        margin-top: 900px;
-        margin-bottom: -500px;
+        font-weight: "SemiBold";
+        margin-left: 35%;
+    }
+    .cards p{
+        width: 800;
+        font-size: 20px;
+        font-weight: "Regular";
         margin-left: 35%;
     }
     .cards h3{
         font-size: 20px;
-        margin-bottom: -20px;
-        margin-left: 25%;
-        margin-top: -10px;
+        font-weight: 20px;
+        font-weight: "semiBold";
+        margin-left:25% ;
     }
-    .cards p{
-        font-size: 20px;
-        width: 570px;
-        margin-bottom: -10px;
-        margin-left: 25%;
-        margin-top: -10px;
+    #chooseContainer img{
+        transform: translateX(390%);
     }
-    #chooseContainer{
-        margin-top: 0%;
-    }
+
 
 }
