--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
     margin-left: 50px
 }
 .icon{
-    margin-left: 430px;
+    margin-left: 420px;
     transform: translateY(-100%);
 
 }
@@ -99,7 +99,7 @@ body{
     margin-top: 25px;
 }
 .paint img{
-    transform: translateX(-10%);
+    transform: translateX(-9.8%);
     margin-top: -18px;
 }
 
@@ -209,6 +209,7 @@ body{
     display: block;
 }
 .cards{
+    padding: 20px 10px 20px 10px;
     background-color: #EBEBEB;
     display: grid;
 }
@@ -394,7 +395,7 @@ span{
 }
 
 #recentPost .row{
-    margin-left: 20px;
+    margin-left: 17px;
 }
 button.search {
     width: 328px;
@@ -590,7 +591,7 @@ hr{
     position: relative;
     border: 2px solid #A3A3A3;
     height: 60px;
-    margin-left: 60px;
+    margin-left: 40px;
     width: 328px;
     box-shadow: 0px 0px 8px rgba(0 0 0 0.16);
     background-color: #EBEBEB;
@@ -659,6 +660,10 @@ hr{
     }
     #chooseContainer img{
         transform: translateX(390%);
+    }
+    .paint img{
+        transform: translateX(-3.5%);
+        margin-top: -18px;
     }
 
 
